vlib/v/checker/tests/unimplemented_interface_j.vv
interface Animal {
mut:
	name string
}

struct Cat {
	name string
}

fn main() {
	mut animals := []Animal{}
	animals << Cat{}
}
